# test

./: Dockerfile  requirements.txt
backend/: api_server.py  bash.exe.stackdump  desktop_agent.py  desktop_agent.spec  pyproject.toml  requirements.txt  screen_tracker.py  screen_tracker_with_idle.py
backend/desktop_agent_files/: desktop_agent.py  desktop_agent.spec  desktop_agent_gui.py
frontend/ai-time-tracker/: package-lock.json  package.json  tailwind.config.js
frontend/ai-time-tracker/public/: index.html  static.json
frontend/ai-time-tracker/src/: App.js  AuthContext.js  ProtectedRoute.js  config.js  index.js
frontend/ai-time-tracker/src/components/: AddClientForm.js  ClientForm.jsx  ClientList.jsx  Login.js  ManualEntryForm.js  Register.js
frontend/ai-time-tracker/src/pages/: AddClientPage.jsx  AdminDashboard.jsx  ClientManagementPage.jsx  WeeklyReport.jsx
