[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogui>=0.1.8",
    "bcrypt==4.0.1",
    "fastapi>=0.116.1",
    "opencv-python>=4.12.0.88",
    "passlib>=1.7.4",
    "psutil==5.9.8",
    "psycopg2-binary>=2.9.10",
    "pyautogui>=0.9.54",
    "pydantic[email]>=2.11.7",
    "pynput>=1.8.1",
    "pytesseract>=0.3.13",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "pywin32==306 ; sys_platform == 'win32'",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
